# CPMULTI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cicd.yml  main.yml
header/: Application.hpp  ImageProcessor.hpp  Utils.hpp
src/: Application.cpp  ImageProcessor.cpp  Utils.cpp
